# Mr-Steal-Yo-Crypto-CTF

./: ape-config.yaml  pyproject.toml
contracts/bonding-curve/: BancorBondingCurve.sol  EminenceCurrency.sol  EminenceCurrencyBase.sol  EminenceCurrencyHelpers.sol
contracts/degen-jackpot/: FNFTHandler.sol  LockManager.sol  OtherContracts.sol  Revest.sol  TokenVault.sol
contracts/extractor/: DutchAuction.sol
contracts/fatality/: AutoCompoundVault.sol  BunnyMinter.sol  ZapBSC.sol
contracts/flash-loaner/: FlashLoaner.sol
contracts/free-lunch/: SafuMakerV2.sol
contracts/freebie/: GovToken.sol  RewardsAdvisor.sol
contracts/game-assets/: AssetHolder.sol  AssetWrapper.sol  GameAsset.sol
contracts/governance-shenanigans/: NotSushiToken.sol
contracts/inflationary-net-worth/: MasterChef.sol  MulaToken.sol
contracts/jpeg-sniper/: BaseLaunchpegNFT.sol  FlatLaunchpeg.sol  LaunchpegErrors.sol
contracts/malleable/: TreasureVault.sol
contracts/nft-bonanza/: BonanzaMarketplace.sol
contracts/opyn-seasame/: OptionsContract.sol  OptionsLogic.sol  OptionsMarket.sol
contracts/other/: Helper.vy  Nft721.sol  Token.sol  Token777.sol  WETH9.sol
contracts/safu-lender/: MoneyMarket.sol  MoneyMarketHelpers.sol
scripts/: bonding_curve.py  degen_jackpot.py  extractoor.py  fatality.py  flash_loaner.py  free_lunch.py  freebie.py  game_assets.py  governance_shenanigans.py  inflationary_net_worth.py  jpeg_sniper.py  malleable.py  nft_bonanza.py  opyn_sesame.py  safu_lender.py  safu_swapper.py  safu_vault.py  safu_wallet.py  side_entrance.py  tasty_stake.py
(+9 files in other folders)
